--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest"
-
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
